--- a/crud/css/style.css
+++ b/crud/css/style.css
@@ -6,87 +6,243 @@ body {
     overflow: hidden;
 }
 
-.container {
-    background: gray;
-    text-align: center;
-    height: 100vh;
+section {
     width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(black, rgb(255, 0, 0));
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-radius: 7px; 
+    position: absolute;
 }
 
-.box {
-    background: white;
-    height: 260px;
-    width: 325px;
-    border-radius: 6px;
-} 
+.body,
+.signin {
+  background-color: #d3d3d3;
+  font-family: 'Montserrat', sans-serif;
+  color: #fff;
+  font-size: 14px;
+  letter-spacing: 1px;
+  
+}
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-} 
+.login {
+    
+  position: relative;
+  height: 560px;
+  width: 405px;
+  margin: auto;
+  padding: 60px 60px;
+  background: url() no-repeat   center center #505050;   
+  background-size: cover;
+  box-shadow: 0px 30px 60px -5px #000;
+
+}
 
 form {
-    width: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 30px 4%;
+  padding-top: 80px;
+  
+}
+
+.active {
+  border-bottom: 2px solid #1161ed;
+  
+}
+
+.nonactive {
+  color: rgba(255, 255, 255, 0.2);
+}
+
+h2 {
+  padding-left: 12px;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  letter-spacing: 2px;
+  display: inline-block;
+  font-weight: 100;
+}
+
+h2:first-child {
+  padding-left: 0px;
+}
+
+span {
+  text-transform: uppercase;
+  font-size: 12px;
+  opacity: 0.4; 
+  display: inline-block;
+  position: relative;
+  top: -65px;
+  transition: all 0.5s ease-in-out;
+}
+
+.text {
+  border: none;
+  width: 89%;
+  padding: 10px 20px;
+  display: block;
+  height: 15px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0);
+  overflow: hidden;
+  margin-top: 15px;
+  transition: all 0.5s ease-in-out;
+}
+
+.text:focus {
+  outline: 0;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0);
+}
+
+.text:focus + span {
+  opacity: 0.6;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  font-family: 'Montserrat', sans-serif;
+  color: rgb(0, 0, 0);
+}
+
+
+
+input {
+  display: inline-block;
+  padding-top: 20px;
+  font-size: 14px;
+}
+
+h2,
+span,
+.custom-checkbox {
+  margin-left: 20px;
+}
+
+.custom-checkbox {
+  -webkit-appearance: none;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 8px;
+  border-radius: 2px;
+  display: inline-block;
+  position: relative;
+  top: 6px;
+}
+
+
+.signin {
+  background-color: #1161ed;
+  color: #FFF;
+  width: 100%;
+  padding: 10px 20px;
+  display: block;
+  height: 39px;
+  border-radius: 20px;
+  margin-top: 30px;
+  transition: all 0.5s ease-in-out;
+  border: none;
+  text-transform: uppercase;
+  
+}
+
+.signin:hover {
+  background: #4082f5;
+  box-shadow: 0px 4px 35px -5px #4082f5;
+  cursor: pointer;
+}
+
+.signin:focus {
+  outline: none;
+}
+
+hr {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  top: 85px;
+  position: relative;
 }
 
 
 .voltar {
-    width: 40px;
-    position: absolute;
-    top: 65.2%;
-    left: 53.2%;
-    transform: translate(-50%, -50%);
-    
-
-}
-
-form div.alt {
     position: relative;
-    margin: 30px 0;
-}
-
-form div.alt label {
-    position: absolute;
-    bottom: 2px;
-    left: 0px;
-    color: rgb(100, 100, 100);
-    cursor: text;
-    transition: all 0.5s ease-in-out;
-}
-
-form div.alt .input {
+    padding: 15px 20px;
+    color: white;
+    background-color: rgb(179, 176, 176);
     width: 100%;
+    height: 39px;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease-in-out;
     padding: 5px;
-    border: 0;
-    border-bottom: 2px solid rgb(200, 200, 200);
-    outline: 0;
-    font-size: 16px;
+    border-radius: 20px;
+    border: none;
+    font-size: 13px;
+    text-transform: uppercase;
+
+    margin-top: 10px;
+    margin-left: 50%;
+    cursor: pointer;
     transition: all 0.5s ease-in-out;
 
 }
 
-form div.alt .input:focus,
-form div.alt .input:valid {
-    border-bottom: 2px solid cornflowerblue;
+
+.voltar:hover {
+    background: #a7a3a3;
+    box-shadow: 0px 4px 35px -5px #817f7f;
+    cursor: pointer;
+  }
+
+  footer {
+    margin-left: 160px;
+  }
+
+  .Sa {
+    position: relative;
+    padding: 15px 20px;
+    color: white;
+    background-color: rgb(76, 211, 23);
+    width: 100%;
+    height: 39px;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease-in-out;
+    padding: 5px;
+    border-radius: 20px;
+    border: none;
+    font-size: 13px;
+    text-transform: uppercase;
+
+    margin-top: 15px;
+    margin-left: 53%;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+
 }
 
-form div.alt .input:focus ~ label,
-form div.alt .input:valid ~ label {
-    transform: translateY(-22px);
-    font-size: 12px;
-    color: cornflowerblue;
+#nome, #email, #senha {
+  border: none;
+  width: 89%;
+  padding: 10px 20px;
+  display: block;
+  height: 15px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0);
+  overflow: hidden;
+  margin-top: 15px;
+  transition: all 0.5s ease-in-out;
 }
 
+#name, #e-mail, #pass {
+  text-transform: uppercase;
+  font-size: 12px;
+  opacity: 0.4; 
+  display: inline-block;
+  position: relative;
+  top: -65px;
+  transition: all 0.5s ease-in-out;
+}
 
